Update Services, Lab, and Pharmacy sections

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <div class="service-card">
                     <span class="service-icon">👓</span>
-                    <h3><strong>Optometry</strong> 👓</h3>
+                    <h3><strong>Optometry</strong></h3>
                     <p>Comprehensive eye examinations, vision testing, contact lens fitting, prescription
                         eyewear, and low vision rehabilitation from experienced optometrists.</p>
                 </div>
@@ -67,7 +67,7 @@
                 <div class="service-card">
                     <span class="service-icon">🦷</span>
                     <h3>Dental Services</h3>
-                    <p>Full range of dental care including preventive dentistry, cosmetic procedures, orthodontics,
+                    <p>Full range of dental care including preventive dentistry, orthodontics,
                         dentures, full mouth scaling(teeth cleaning) & polishing, fillings, root canal and extractions.
                     </p>
                 </div>
@@ -82,15 +82,15 @@
                 <div class="service-card">
                     <span class="service-icon">⚕️</span>
                     <h3>Surgical Procedures</h3>
-                    <p>Advanced surgical facilities for eye and dental procedures performed by experienced surgeons
-                        using cutting-edge technology.</p>
+                    <p>Advanced surgical facilities including a fully functional theatre and inpatient care, performed
+                        by experienced surgeons using cutting-edge technology.</p>
                 </div>
 
                 <div class="service-card">
                     <span class="service-icon">🏥</span>
                     <h3>Outpatient Care</h3>
-                    <p>Convenient outpatient services for consultations, follow-up appointments, minor procedures,
-                        and routine check-ups.</p>
+                    <p>Comprehensive outpatient care including general outpatient consultation and immunization
+                        services.</p>
                 </div>
             </div>
         </div>
@@ -129,24 +129,21 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Time</div>
+
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Enquiries/Customer Care</strong></div>
-                                <div>5 Minutes</div>
+
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Registration & Bookings</strong></div>
-                                <div>5-10 Minutes</div>
+
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Triage</strong></div>
-                                <div>10-20 Minutes</div>
+
                             </div>
-                            <div class="table-row">
-                                <div class="service-name"><strong>Consultation</strong></div>
-                                <div>15-45 Minutes</div>
-                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -161,16 +158,20 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Time</div>
+
                             </div>
-                            <div class="table-row">
-                                <div class="service-name"><strong>Laboratory</strong></div>
-                                <div>100 - 1,000</div>
-                                <div>From 30 Minutes</div>
-                            </div>
-                            <div class="table-row">
-                                <div class="service-name"><strong>Microbiology and Parasitology</strong></div>
-                                <div>From 30 Minutes</div>
+                            <div class="table-row highlight">
+                                <div class="service-name">
+                                    <strong>Laboratory</strong>
+                                    <ul style="margin:10px 0 0 20px; font-size:0.9rem;">
+                                        <li>Blood test</li>
+                                        <li>Cultures</li>
+                                        <li>HTS</li>
+                                        <li>Microbiology and Parasitology</li>
+                                        <li>Others</li>
+                                    </ul>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -187,11 +188,16 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Time</div>
                             </div>
-                            <div class="table-row">
-                                <div class="service-name"><strong>Pharmacy</strong></div>
-                                <div>15-30 Minutes</div>
+                            <div class="table-row highlight">
+                                <div class="service-name">
+                                    <strong>Pharmacy Services</strong>
+                                    <ul style="margin:10px 0 0 20px; font-size:0.9rem;">
+                                        <li>Prescription Management</li>
+                                        <li>Cold chain & commodity management</li>
+                                        <li>Clinical pharmaceutical care</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -207,7 +213,7 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Time</div>
+
                             </div>
                             <div class="table-row highlight">
                                 <div class="service-name">
@@ -215,7 +221,7 @@
                                     <small style="display:block; margin-top:5px;">General Outpatient Services -
                                         Trauma, Communicable & Non-Communicable Diseases, Chronic Ailments</small>
                                 </div>
-                                <div>15-30 Minutes</div>
+
                             </div>
                         </div>
                     </div>
@@ -231,21 +237,32 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Time</div>
+
                             </div>
                             <div class="table-row highlight">
                                 <div class="service-name">
                                     <strong>👁️ Eye Clinic</strong>
                                     <ul style="margin:10px 0 0 20px; font-size:0.9rem;">
-                                        <li>Consultation: KSH 200</li>
-                                        <li>Cataract Surgery: KSH 3,000 - 5,000</li>
-                                        <li>Eye Laser Procedures: KSH 1,500</li>
-                                        <li>Other Eye Surgeries: KSH 2,500</li>
-                                        <li>Optometry (Eyewear & Lenses): From 2,000</li>
+
+                                        <li>Cataract Surgery</li>
+                                        <li>management of eye Infections and allergic reactions </li>
+                                        <li> Eye trauma</li>
+                                        <li>Eye Laser Procedures</li>
+                                        <li>Other Eye Surgeries</li>
+
                                     </ul>
-                                    <strong>Optometry (Eyewear & Lenses)</strong>
+
                                 </div>
-                                <div>15 Minutes - In-Patient</div>
+                                <div class="service-name">
+                                    <strong> 👓 Optometry (Eyewear & Lenses)</strong>
+                                    <ul style="margin:10px 0 0 20px; font-size:0.9rem;">
+                                        <li>visual acuity & refraction tests</li>
+                                        <li>Prescribing and dispensing glasses</li>
+                                        <li> Extensive selection of frames & lenses</li>
+                                        <li>Eye wear repair services</li>
+                                    </ul>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -261,23 +278,23 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Time</div>
+
                             </div>
                             <div class="table-row highlight">
                                 <div class="service-name">
                                     <strong>🦷 Dental Clinic</strong>
                                     <ul style="margin:10px 0 0 20px; font-size:0.9rem;">
-                                        <li>Consultation: KSH 200</li>
-                                        <li>Extractions: KSH 200</li>
-                                        <li>Root Canal: KSH 2,000 - 3,000</li>
-                                        <li>Fillings: KSH 1,000</li>
-                                        <li>Full Mouth Scaling: KSH 500</li>
-                                        <li>Disimpaction: KSH 2,000</li>
-                                        <li>Pulpotomy: KSH 1,000</li>
-                                        <li>Dentures: KSH 1,500 - 6,000</li>
+
+                                        <li>Extractions</li>
+                                        <li>Root Canal</li>
+                                        <li>Fillings</li>
+                                        <li>Full Mouth Scaling</li>
+                                        <li>Disimpaction</li>
+                                        <li>Pulpotomy</li>
+                                        <li>Dentures</li>
                                     </ul>
                                 </div>
-                                <div>15-90 Minutes</div>
+
                             </div>
                         </div>
                     </div>
@@ -293,16 +310,21 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Time</div>
+
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Rehabilitative Services</strong><br><small>Medical
                                         Social Work</small></div>
-                                <div>30-40 Minutes</div>
+
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Nutrition & Dietetic Services</strong></div>
-                                <div>15-30 Minutes</div>
+
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Public Health Services</strong><br><small>Medical
+                                        Certificate for Food Handlers, Students and Adults</small></div>
+
                             </div>
                         </div>
                     </div>
@@ -360,21 +382,21 @@
                 <div class="specialist-card">
                     <div class="icon">👁️</div>
                     <h3>Ophthalmology</h3>
-                    <p><strong>3 Ophthalmologists</strong></p>
+                    <p><strong>Ophthalmologists & Optometrists</strong></p>
                     <p>Experts in eye care including cataract, glaucoma, and vision correction procedures.</p>
                 </div>
 
                 <div class="specialist-card">
                     <div class="icon">🦷</div>
                     <h3>Dental Surgery</h3>
-                    <p><strong>3 Dental Surgeons</strong></p>
+                    <p><strong> Dental Surgeons</strong></p>
                     <p>Providing dental care for healthier smiles.</p>
                 </div>
 
                 <div class="specialist-card">
                     <div class="icon">💊</div>
                     <h3>Pharmacy</h3>
-                    <p><strong>3 Pharmacists</strong></p>
+                    <p><strong>Pharmacists</strong></p>
                     <p>Ensuring accurate medication dispensing and offering expert guidance on prescriptions.</p>
                 </div>
 
@@ -382,7 +404,9 @@
                     <div class="icon">🏥</div>
                     <h3>Medical Staff</h3>
                     <p><strong>Support Team</strong></p>
-                    <p>Includes nurses, lab technicians, and support staff who provide essential care services.</p>
+                    <p>Includes nurses, laboratory technicians,Public Health Officers and support staff who provide
+                        essential
+                        care services.</p>
                 </div>
             </div>
         </div>
@@ -460,7 +484,12 @@
                 <h3>Services</h3>
                 <a href="#services">Ophthalmology</a>
                 <a href="#services">Dental Care</a>
+                <a href="#services">Eye care</a>
                 <a href="#services">Laboratory</a>
+                <a href="#services">Outpatient</a>
+                <a href="#services">Inpatient</a>
+                <a href="#services">HIV testing services</a>
+                <a href="#services">Immunization services</a>
             </div>
 
             <div class="footer-section">
@@ -469,9 +498,9 @@
             </div>
         </div>
 
-        <div class="footer-bottom">
+        <!-- <div class="footer-bottom">
             <p>&copy; 2025 Kenneth Matiba Eye & Dental Hospital - Ministry of Health. All rights reserved.</p>
-        </div>
+        </div> -->
     </footer>
 
     <script src="script.js"></script>
